--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     ]
   },
   "devDependencies": {
-    "enzyme": "^3.11.0"
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "jest": "^26.6.0"
   }
 }
